# anomaly_detection_project

./: .gitignore  README.md  pyproject.toml  Приблизительная структура проекта детекции аномалий.docx  Сравнение различных моделей для детекции аномалий.docx
notebooks/0_Basics/: 0_01_sinthetic_data.ipynb
notebooks/1_Classical_ML/: 1_01_sinthetic_data.ipynb  1_02_00_creditcard_eda.ipynb  1_02_01_creditcard_IFO.ipynb  1_02_02_creditcard_LOF.ipynb  1_02_03_creditcard_OCSVM.ipynb  1_03_01_creditcard_FE.ipynb  1_03_02_creditcard_LOF_ensemble.ipynb  1_04_01_creditcard_RF.ipynb  1_04_02_creditcard_CB.ipynb
notebooks/2_NN/: 2_01_01_Simple_NN.ipynb  2_01_02_TAB_NET.ipynb  2_01_03_TAB_MIXER.ipynb  2_01_04_LSTM.ipynb  2_01_04_LSTM_colab.ipynb  2_01_04_LSTM_colab.ipynb.bak_20251007215732  2_01_04_LSTM_colab.ipynb.bak_nowidgets_20251007221108  2_01_05_Transformer.ipynb
scripts/: fix_widgets.py
