[tool.poetry]
package-mode = false
name = "anomaly-detection-project"
version = "0.1.0"
description = ""
authors = ["Aliaksandr Borsuk <yabarsukby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10, <3.11"
numpy = "1.26"
pandas = "^2.3.1"
scikit-learn = ">=1.2,<1.7"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
jupyterlab = "^4.4.4"
ipykernel = "^6.29.5"
umap-learn = "^0.5.9.post2"
imbalanced-learn = "^0.13.0"


[tool.poetry.group.dev.dependencies]
memory-profiler = "^0.61.0"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
